// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`basic function 1`] = `
{
  "resource": {
    "aws_cloudwatch_log_group": {
      "Function_CloudwatchLogGroup_ABDCF4C4": {
        "name": "/aws/lambda/Function-c852aba6",
        "retention_in_days": 30,
      },
    },
    "aws_iam_role": {
      "Function_IamRole_678BE84C": {
        "assume_role_policy": "{"Version":"2012-10-17","Statement":[{"Action":"sts:AssumeRole","Principal":{"Service":"lambda.amazonaws.com"},"Effect":"Allow"}]}",
      },
    },
    "aws_iam_role_policy": {
      "Function_IamRolePolicy_E3B26607": {
        "policy": "{"Version":"2012-10-17","Statement":[{"Effect":"Allow","Action":"none:null","Resource":"*"}]}",
        "role": "\${aws_iam_role.Function_IamRole_678BE84C.name}",
      },
    },
    "aws_iam_role_policy_attachment": {
      "Function_IamRolePolicyAttachment_CACE1358": {
        "policy_arn": "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
        "role": "\${aws_iam_role.Function_IamRole_678BE84C.name}",
      },
    },
    "aws_lambda_function": {
      "Function": {
        "architectures": [
          "arm64",
        ],
        "environment": {
          "variables": {
            "NODE_OPTIONS": "--enable-source-maps",
            "WING_FUNCTION_NAME": "Function-c852aba6",
          },
        },
        "function_name": "Function-c852aba6",
        "handler": "index.handler",
        "memory_size": 1024,
        "publish": true,
        "role": "\${aws_iam_role.Function_IamRole_678BE84C.arn}",
        "runtime": "nodejs20.x",
        "s3_bucket": "\${aws_s3_bucket.Code.bucket}",
        "s3_key": "\${aws_s3_object.Function_S3Object_C62A0C2D.key}",
        "timeout": 60,
        "vpc_config": {
          "security_group_ids": [],
          "subnet_ids": [],
        },
      },
    },
    "aws_s3_bucket": {
      "Code": {
        "bucket_prefix": "code-c84a50b1-",
      },
    },
    "aws_s3_object": {
      "Function_S3Object_C62A0C2D": {
        "bucket": "\${aws_s3_bucket.Code.bucket}",
        "key": "<key>",
        "source": "<source>",
      },
    },
  },
}
`;

exports[`basic function 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "Code": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformResource",
                  "version": "0.20.3",
                },
                "display": {},
                "id": "Code",
                "path": "root/Default/Code",
              },
              "Function": {
                "children": {
                  "Asset": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformAsset",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "Asset",
                    "path": "root/Default/Function/Asset",
                  },
                  "CloudwatchLogGroup": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "CloudwatchLogGroup",
                    "path": "root/Default/Function/CloudwatchLogGroup",
                  },
                  "Default": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "Default",
                    "path": "root/Default/Function/Default",
                  },
                  "IamRole": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "IamRole",
                    "path": "root/Default/Function/IamRole",
                  },
                  "IamRolePolicy": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "IamRolePolicy",
                    "path": "root/Default/Function/IamRolePolicy",
                  },
                  "IamRolePolicyAttachment": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "IamRolePolicyAttachment",
                    "path": "root/Default/Function/IamRolePolicyAttachment",
                  },
                  "S3Object": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "S3Object",
                    "path": "root/Default/Function/S3Object",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.3.0",
                },
                "display": {
                  "description": "A cloud function (FaaS)",
                  "title": "Function",
                },
                "id": "Function",
                "path": "root/Default/Function",
              },
              "aws": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.20.3",
                },
                "display": {},
                "id": "aws",
                "path": "root/Default/aws",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.3.0",
            },
            "display": {},
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.20.3",
            },
            "display": {},
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.20.3",
        },
        "display": {},
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.20.3",
    },
    "display": {},
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`basic function with custom log retention 1`] = `
{
  "resource": {
    "aws_cloudwatch_log_group": {
      "Function_CloudwatchLogGroup_ABDCF4C4": {
        "name": "/aws/lambda/Function-c852aba6",
        "retention_in_days": 7,
      },
    },
    "aws_iam_role": {
      "Function_IamRole_678BE84C": {
        "assume_role_policy": "{"Version":"2012-10-17","Statement":[{"Action":"sts:AssumeRole","Principal":{"Service":"lambda.amazonaws.com"},"Effect":"Allow"}]}",
      },
    },
    "aws_iam_role_policy": {
      "Function_IamRolePolicy_E3B26607": {
        "policy": "{"Version":"2012-10-17","Statement":[{"Effect":"Allow","Action":"none:null","Resource":"*"}]}",
        "role": "\${aws_iam_role.Function_IamRole_678BE84C.name}",
      },
    },
    "aws_iam_role_policy_attachment": {
      "Function_IamRolePolicyAttachment_CACE1358": {
        "policy_arn": "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
        "role": "\${aws_iam_role.Function_IamRole_678BE84C.name}",
      },
    },
    "aws_lambda_function": {
      "Function": {
        "architectures": [
          "arm64",
        ],
        "environment": {
          "variables": {
            "NODE_OPTIONS": "--enable-source-maps",
            "WING_FUNCTION_NAME": "Function-c852aba6",
          },
        },
        "function_name": "Function-c852aba6",
        "handler": "index.handler",
        "memory_size": 1024,
        "publish": true,
        "role": "\${aws_iam_role.Function_IamRole_678BE84C.arn}",
        "runtime": "nodejs20.x",
        "s3_bucket": "\${aws_s3_bucket.Code.bucket}",
        "s3_key": "\${aws_s3_object.Function_S3Object_C62A0C2D.key}",
        "timeout": 60,
        "vpc_config": {
          "security_group_ids": [],
          "subnet_ids": [],
        },
      },
    },
    "aws_s3_bucket": {
      "Code": {
        "bucket_prefix": "code-c84a50b1-",
      },
    },
    "aws_s3_object": {
      "Function_S3Object_C62A0C2D": {
        "bucket": "\${aws_s3_bucket.Code.bucket}",
        "key": "<key>",
        "source": "<source>",
      },
    },
  },
}
`;

exports[`basic function with custom log retention 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "Code": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformResource",
                  "version": "0.20.3",
                },
                "display": {},
                "id": "Code",
                "path": "root/Default/Code",
              },
              "Function": {
                "children": {
                  "Asset": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformAsset",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "Asset",
                    "path": "root/Default/Function/Asset",
                  },
                  "CloudwatchLogGroup": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "CloudwatchLogGroup",
                    "path": "root/Default/Function/CloudwatchLogGroup",
                  },
                  "Default": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "Default",
                    "path": "root/Default/Function/Default",
                  },
                  "IamRole": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "IamRole",
                    "path": "root/Default/Function/IamRole",
                  },
                  "IamRolePolicy": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "IamRolePolicy",
                    "path": "root/Default/Function/IamRolePolicy",
                  },
                  "IamRolePolicyAttachment": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "IamRolePolicyAttachment",
                    "path": "root/Default/Function/IamRolePolicyAttachment",
                  },
                  "S3Object": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "S3Object",
                    "path": "root/Default/Function/S3Object",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.3.0",
                },
                "display": {
                  "description": "A cloud function (FaaS)",
                  "title": "Function",
                },
                "id": "Function",
                "path": "root/Default/Function",
              },
              "aws": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.20.3",
                },
                "display": {},
                "id": "aws",
                "path": "root/Default/aws",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.3.0",
            },
            "display": {},
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.20.3",
            },
            "display": {},
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.20.3",
        },
        "display": {},
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.20.3",
    },
    "display": {},
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`basic function with environment variables 1`] = `
{
  "resource": {
    "aws_cloudwatch_log_group": {
      "Function_CloudwatchLogGroup_ABDCF4C4": {
        "name": "/aws/lambda/Function-c852aba6",
        "retention_in_days": 30,
      },
    },
    "aws_iam_role": {
      "Function_IamRole_678BE84C": {
        "assume_role_policy": "{"Version":"2012-10-17","Statement":[{"Action":"sts:AssumeRole","Principal":{"Service":"lambda.amazonaws.com"},"Effect":"Allow"}]}",
      },
    },
    "aws_iam_role_policy": {
      "Function_IamRolePolicy_E3B26607": {
        "policy": "{"Version":"2012-10-17","Statement":[{"Effect":"Allow","Action":"none:null","Resource":"*"}]}",
        "role": "\${aws_iam_role.Function_IamRole_678BE84C.name}",
      },
    },
    "aws_iam_role_policy_attachment": {
      "Function_IamRolePolicyAttachment_CACE1358": {
        "policy_arn": "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
        "role": "\${aws_iam_role.Function_IamRole_678BE84C.name}",
      },
    },
    "aws_lambda_function": {
      "Function": {
        "architectures": [
          "arm64",
        ],
        "environment": {
          "variables": {
            "BOOM": "BAM",
            "FOO": "BAR",
            "NODE_OPTIONS": "--enable-source-maps",
            "WING_FUNCTION_NAME": "Function-c852aba6",
          },
        },
        "function_name": "Function-c852aba6",
        "handler": "index.handler",
        "memory_size": 1024,
        "publish": true,
        "role": "\${aws_iam_role.Function_IamRole_678BE84C.arn}",
        "runtime": "nodejs20.x",
        "s3_bucket": "\${aws_s3_bucket.Code.bucket}",
        "s3_key": "\${aws_s3_object.Function_S3Object_C62A0C2D.key}",
        "timeout": 60,
        "vpc_config": {
          "security_group_ids": [],
          "subnet_ids": [],
        },
      },
    },
    "aws_s3_bucket": {
      "Code": {
        "bucket_prefix": "code-c84a50b1-",
      },
    },
    "aws_s3_object": {
      "Function_S3Object_C62A0C2D": {
        "bucket": "\${aws_s3_bucket.Code.bucket}",
        "key": "<key>",
        "source": "<source>",
      },
    },
  },
}
`;

exports[`basic function with environment variables 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "Code": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformResource",
                  "version": "0.20.3",
                },
                "display": {},
                "id": "Code",
                "path": "root/Default/Code",
              },
              "Function": {
                "children": {
                  "Asset": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformAsset",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "Asset",
                    "path": "root/Default/Function/Asset",
                  },
                  "CloudwatchLogGroup": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "CloudwatchLogGroup",
                    "path": "root/Default/Function/CloudwatchLogGroup",
                  },
                  "Default": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "Default",
                    "path": "root/Default/Function/Default",
                  },
                  "IamRole": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "IamRole",
                    "path": "root/Default/Function/IamRole",
                  },
                  "IamRolePolicy": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "IamRolePolicy",
                    "path": "root/Default/Function/IamRolePolicy",
                  },
                  "IamRolePolicyAttachment": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "IamRolePolicyAttachment",
                    "path": "root/Default/Function/IamRolePolicyAttachment",
                  },
                  "S3Object": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "S3Object",
                    "path": "root/Default/Function/S3Object",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.3.0",
                },
                "display": {
                  "description": "A cloud function (FaaS)",
                  "title": "Function",
                },
                "id": "Function",
                "path": "root/Default/Function",
              },
              "aws": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.20.3",
                },
                "display": {},
                "id": "aws",
                "path": "root/Default/aws",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.3.0",
            },
            "display": {},
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.20.3",
            },
            "display": {},
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.20.3",
        },
        "display": {},
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.20.3",
    },
    "display": {},
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`basic function with infinite log retention 1`] = `
{
  "resource": {
    "aws_iam_role": {
      "Function_IamRole_678BE84C": {
        "assume_role_policy": "{"Version":"2012-10-17","Statement":[{"Action":"sts:AssumeRole","Principal":{"Service":"lambda.amazonaws.com"},"Effect":"Allow"}]}",
      },
    },
    "aws_iam_role_policy": {
      "Function_IamRolePolicy_E3B26607": {
        "policy": "{"Version":"2012-10-17","Statement":[{"Effect":"Allow","Action":"none:null","Resource":"*"}]}",
        "role": "\${aws_iam_role.Function_IamRole_678BE84C.name}",
      },
    },
    "aws_iam_role_policy_attachment": {
      "Function_IamRolePolicyAttachment_CACE1358": {
        "policy_arn": "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
        "role": "\${aws_iam_role.Function_IamRole_678BE84C.name}",
      },
    },
    "aws_lambda_function": {
      "Function": {
        "architectures": [
          "arm64",
        ],
        "environment": {
          "variables": {
            "NODE_OPTIONS": "--enable-source-maps",
            "WING_FUNCTION_NAME": "Function-c852aba6",
          },
        },
        "function_name": "Function-c852aba6",
        "handler": "index.handler",
        "memory_size": 1024,
        "publish": true,
        "role": "\${aws_iam_role.Function_IamRole_678BE84C.arn}",
        "runtime": "nodejs20.x",
        "s3_bucket": "\${aws_s3_bucket.Code.bucket}",
        "s3_key": "\${aws_s3_object.Function_S3Object_C62A0C2D.key}",
        "timeout": 60,
        "vpc_config": {
          "security_group_ids": [],
          "subnet_ids": [],
        },
      },
    },
    "aws_s3_bucket": {
      "Code": {
        "bucket_prefix": "code-c84a50b1-",
      },
    },
    "aws_s3_object": {
      "Function_S3Object_C62A0C2D": {
        "bucket": "\${aws_s3_bucket.Code.bucket}",
        "key": "<key>",
        "source": "<source>",
      },
    },
  },
}
`;

exports[`basic function with infinite log retention 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "Code": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformResource",
                  "version": "0.20.3",
                },
                "display": {},
                "id": "Code",
                "path": "root/Default/Code",
              },
              "Function": {
                "children": {
                  "Asset": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformAsset",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "Asset",
                    "path": "root/Default/Function/Asset",
                  },
                  "Default": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "Default",
                    "path": "root/Default/Function/Default",
                  },
                  "IamRole": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "IamRole",
                    "path": "root/Default/Function/IamRole",
                  },
                  "IamRolePolicy": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "IamRolePolicy",
                    "path": "root/Default/Function/IamRolePolicy",
                  },
                  "IamRolePolicyAttachment": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "IamRolePolicyAttachment",
                    "path": "root/Default/Function/IamRolePolicyAttachment",
                  },
                  "S3Object": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "S3Object",
                    "path": "root/Default/Function/S3Object",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.3.0",
                },
                "display": {
                  "description": "A cloud function (FaaS)",
                  "title": "Function",
                },
                "id": "Function",
                "path": "root/Default/Function",
              },
              "aws": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.20.3",
                },
                "display": {},
                "id": "aws",
                "path": "root/Default/aws",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.3.0",
            },
            "display": {},
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.20.3",
            },
            "display": {},
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.20.3",
        },
        "display": {},
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.20.3",
    },
    "display": {},
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`basic function with memory size specified 1`] = `
{
  "resource": {
    "aws_cloudwatch_log_group": {
      "Function_CloudwatchLogGroup_ABDCF4C4": {
        "name": "/aws/lambda/Function-c852aba6",
        "retention_in_days": 30,
      },
    },
    "aws_iam_role": {
      "Function_IamRole_678BE84C": {
        "assume_role_policy": "{"Version":"2012-10-17","Statement":[{"Action":"sts:AssumeRole","Principal":{"Service":"lambda.amazonaws.com"},"Effect":"Allow"}]}",
      },
    },
    "aws_iam_role_policy": {
      "Function_IamRolePolicy_E3B26607": {
        "policy": "{"Version":"2012-10-17","Statement":[{"Effect":"Allow","Action":"none:null","Resource":"*"}]}",
        "role": "\${aws_iam_role.Function_IamRole_678BE84C.name}",
      },
    },
    "aws_iam_role_policy_attachment": {
      "Function_IamRolePolicyAttachment_CACE1358": {
        "policy_arn": "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
        "role": "\${aws_iam_role.Function_IamRole_678BE84C.name}",
      },
    },
    "aws_lambda_function": {
      "Function": {
        "architectures": [
          "arm64",
        ],
        "environment": {
          "variables": {
            "NODE_OPTIONS": "--enable-source-maps",
            "WING_FUNCTION_NAME": "Function-c852aba6",
          },
        },
        "function_name": "Function-c852aba6",
        "handler": "index.handler",
        "memory_size": 512,
        "publish": true,
        "role": "\${aws_iam_role.Function_IamRole_678BE84C.arn}",
        "runtime": "nodejs20.x",
        "s3_bucket": "\${aws_s3_bucket.Code.bucket}",
        "s3_key": "\${aws_s3_object.Function_S3Object_C62A0C2D.key}",
        "timeout": 60,
        "vpc_config": {
          "security_group_ids": [],
          "subnet_ids": [],
        },
      },
    },
    "aws_s3_bucket": {
      "Code": {
        "bucket_prefix": "code-c84a50b1-",
      },
    },
    "aws_s3_object": {
      "Function_S3Object_C62A0C2D": {
        "bucket": "\${aws_s3_bucket.Code.bucket}",
        "key": "<key>",
        "source": "<source>",
      },
    },
  },
}
`;

exports[`basic function with memory size specified 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "Code": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformResource",
                  "version": "0.20.3",
                },
                "display": {},
                "id": "Code",
                "path": "root/Default/Code",
              },
              "Function": {
                "children": {
                  "Asset": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformAsset",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "Asset",
                    "path": "root/Default/Function/Asset",
                  },
                  "CloudwatchLogGroup": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "CloudwatchLogGroup",
                    "path": "root/Default/Function/CloudwatchLogGroup",
                  },
                  "Default": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "Default",
                    "path": "root/Default/Function/Default",
                  },
                  "IamRole": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "IamRole",
                    "path": "root/Default/Function/IamRole",
                  },
                  "IamRolePolicy": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "IamRolePolicy",
                    "path": "root/Default/Function/IamRolePolicy",
                  },
                  "IamRolePolicyAttachment": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "IamRolePolicyAttachment",
                    "path": "root/Default/Function/IamRolePolicyAttachment",
                  },
                  "S3Object": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "S3Object",
                    "path": "root/Default/Function/S3Object",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.3.0",
                },
                "display": {
                  "description": "A cloud function (FaaS)",
                  "title": "Function",
                },
                "id": "Function",
                "path": "root/Default/Function",
              },
              "aws": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.20.3",
                },
                "display": {},
                "id": "aws",
                "path": "root/Default/aws",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.3.0",
            },
            "display": {},
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.20.3",
            },
            "display": {},
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.20.3",
        },
        "display": {},
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.20.3",
    },
    "display": {},
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`basic function with timeout explicitly set 1`] = `
{
  "resource": {
    "aws_cloudwatch_log_group": {
      "Function_CloudwatchLogGroup_ABDCF4C4": {
        "name": "/aws/lambda/Function-c852aba6",
        "retention_in_days": 30,
      },
    },
    "aws_iam_role": {
      "Function_IamRole_678BE84C": {
        "assume_role_policy": "{"Version":"2012-10-17","Statement":[{"Action":"sts:AssumeRole","Principal":{"Service":"lambda.amazonaws.com"},"Effect":"Allow"}]}",
      },
    },
    "aws_iam_role_policy": {
      "Function_IamRolePolicy_E3B26607": {
        "policy": "{"Version":"2012-10-17","Statement":[{"Effect":"Allow","Action":"none:null","Resource":"*"}]}",
        "role": "\${aws_iam_role.Function_IamRole_678BE84C.name}",
      },
    },
    "aws_iam_role_policy_attachment": {
      "Function_IamRolePolicyAttachment_CACE1358": {
        "policy_arn": "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
        "role": "\${aws_iam_role.Function_IamRole_678BE84C.name}",
      },
    },
    "aws_lambda_function": {
      "Function": {
        "architectures": [
          "arm64",
        ],
        "environment": {
          "variables": {
            "NODE_OPTIONS": "--enable-source-maps",
            "WING_FUNCTION_NAME": "Function-c852aba6",
          },
        },
        "function_name": "Function-c852aba6",
        "handler": "index.handler",
        "memory_size": 1024,
        "publish": true,
        "role": "\${aws_iam_role.Function_IamRole_678BE84C.arn}",
        "runtime": "nodejs20.x",
        "s3_bucket": "\${aws_s3_bucket.Code.bucket}",
        "s3_key": "\${aws_s3_object.Function_S3Object_C62A0C2D.key}",
        "timeout": 30,
        "vpc_config": {
          "security_group_ids": [],
          "subnet_ids": [],
        },
      },
    },
    "aws_s3_bucket": {
      "Code": {
        "bucket_prefix": "code-c84a50b1-",
      },
    },
    "aws_s3_object": {
      "Function_S3Object_C62A0C2D": {
        "bucket": "\${aws_s3_bucket.Code.bucket}",
        "key": "<key>",
        "source": "<source>",
      },
    },
  },
}
`;

exports[`basic function with timeout explicitly set 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "Code": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformResource",
                  "version": "0.20.3",
                },
                "display": {},
                "id": "Code",
                "path": "root/Default/Code",
              },
              "Function": {
                "children": {
                  "Asset": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformAsset",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "Asset",
                    "path": "root/Default/Function/Asset",
                  },
                  "CloudwatchLogGroup": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "CloudwatchLogGroup",
                    "path": "root/Default/Function/CloudwatchLogGroup",
                  },
                  "Default": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "Default",
                    "path": "root/Default/Function/Default",
                  },
                  "IamRole": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "IamRole",
                    "path": "root/Default/Function/IamRole",
                  },
                  "IamRolePolicy": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "IamRolePolicy",
                    "path": "root/Default/Function/IamRolePolicy",
                  },
                  "IamRolePolicyAttachment": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "IamRolePolicyAttachment",
                    "path": "root/Default/Function/IamRolePolicyAttachment",
                  },
                  "S3Object": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "S3Object",
                    "path": "root/Default/Function/S3Object",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.3.0",
                },
                "display": {
                  "description": "A cloud function (FaaS)",
                  "title": "Function",
                },
                "id": "Function",
                "path": "root/Default/Function",
              },
              "aws": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.20.3",
                },
                "display": {},
                "id": "aws",
                "path": "root/Default/aws",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.3.0",
            },
            "display": {},
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.20.3",
            },
            "display": {},
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.20.3",
        },
        "display": {},
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.20.3",
    },
    "display": {},
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`function name valid 1`] = `
{
  "resource": {
    "aws_cloudwatch_log_group": {
      "The-Mighty_Function-01_CloudwatchLogGroup_BC84FFD4": {
        "name": "/aws/lambda/The-Mighty_Function-01-c86057f3",
        "retention_in_days": 30,
      },
    },
    "aws_iam_role": {
      "The-Mighty_Function-01_IamRole_590EA29B": {
        "assume_role_policy": "{"Version":"2012-10-17","Statement":[{"Action":"sts:AssumeRole","Principal":{"Service":"lambda.amazonaws.com"},"Effect":"Allow"}]}",
      },
    },
    "aws_iam_role_policy": {
      "The-Mighty_Function-01_IamRolePolicy_506506FA": {
        "policy": "{"Version":"2012-10-17","Statement":[{"Effect":"Allow","Action":"none:null","Resource":"*"}]}",
        "role": "\${aws_iam_role.The-Mighty_Function-01_IamRole_590EA29B.name}",
      },
    },
    "aws_iam_role_policy_attachment": {
      "The-Mighty_Function-01_IamRolePolicyAttachment_63D2B658": {
        "policy_arn": "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
        "role": "\${aws_iam_role.The-Mighty_Function-01_IamRole_590EA29B.name}",
      },
    },
    "aws_lambda_function": {
      "The-Mighty_Function-01": {
        "architectures": [
          "arm64",
        ],
        "environment": {
          "variables": {
            "NODE_OPTIONS": "--enable-source-maps",
            "WING_FUNCTION_NAME": "The-Mighty_Function-01-c86057f3",
          },
        },
        "function_name": "The-Mighty_Function-01-c86057f3",
        "handler": "index.handler",
        "memory_size": 1024,
        "publish": true,
        "role": "\${aws_iam_role.The-Mighty_Function-01_IamRole_590EA29B.arn}",
        "runtime": "nodejs20.x",
        "s3_bucket": "\${aws_s3_bucket.Code.bucket}",
        "s3_key": "\${aws_s3_object.The-Mighty_Function-01_S3Object_4181DCAE.key}",
        "timeout": 60,
        "vpc_config": {
          "security_group_ids": [],
          "subnet_ids": [],
        },
      },
    },
    "aws_s3_bucket": {
      "Code": {
        "bucket_prefix": "code-c84a50b1-",
      },
    },
    "aws_s3_object": {
      "The-Mighty_Function-01_S3Object_4181DCAE": {
        "bucket": "\${aws_s3_bucket.Code.bucket}",
        "key": "<key>",
        "source": "<source>",
      },
    },
  },
}
`;

exports[`function name valid 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "Code": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformResource",
                  "version": "0.20.3",
                },
                "display": {},
                "id": "Code",
                "path": "root/Default/Code",
              },
              "The-Mighty_Function-01": {
                "children": {
                  "Asset": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformAsset",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "Asset",
                    "path": "root/Default/The-Mighty_Function-01/Asset",
                  },
                  "CloudwatchLogGroup": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "CloudwatchLogGroup",
                    "path": "root/Default/The-Mighty_Function-01/CloudwatchLogGroup",
                  },
                  "Default": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "Default",
                    "path": "root/Default/The-Mighty_Function-01/Default",
                  },
                  "IamRole": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "IamRole",
                    "path": "root/Default/The-Mighty_Function-01/IamRole",
                  },
                  "IamRolePolicy": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "IamRolePolicy",
                    "path": "root/Default/The-Mighty_Function-01/IamRolePolicy",
                  },
                  "IamRolePolicyAttachment": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "IamRolePolicyAttachment",
                    "path": "root/Default/The-Mighty_Function-01/IamRolePolicyAttachment",
                  },
                  "S3Object": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "S3Object",
                    "path": "root/Default/The-Mighty_Function-01/S3Object",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.3.0",
                },
                "display": {
                  "description": "A cloud function (FaaS)",
                  "title": "Function",
                },
                "id": "The-Mighty_Function-01",
                "path": "root/Default/The-Mighty_Function-01",
              },
              "aws": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.20.3",
                },
                "display": {},
                "id": "aws",
                "path": "root/Default/aws",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.3.0",
            },
            "display": {},
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.20.3",
            },
            "display": {},
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.20.3",
        },
        "display": {},
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.20.3",
    },
    "display": {},
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`function will be behind a vpc when vpc_lambda is set to true 1`] = `
{
  "data": {
    "aws_region": {
      "Region": {},
    },
  },
  "resource": {
    "aws_cloudwatch_log_group": {
      "Function_CloudwatchLogGroup_ABDCF4C4": {
        "name": "/aws/lambda/Function-c852aba6",
        "retention_in_days": 30,
      },
    },
    "aws_eip": {
      "EIP": {},
    },
    "aws_iam_role": {
      "Function_IamRole_678BE84C": {
        "assume_role_policy": "{"Version":"2012-10-17","Statement":[{"Action":"sts:AssumeRole","Principal":{"Service":"lambda.amazonaws.com"},"Effect":"Allow"}]}",
      },
    },
    "aws_iam_role_policy": {
      "Function_IamRolePolicy_E3B26607": {
        "policy": "{"Version":"2012-10-17","Statement":[{"Action":["ec2:CreateNetworkInterface","ec2:DescribeNetworkInterfaces","ec2:DeleteNetworkInterface","ec2:DescribeSubnets","ec2:DescribeSecurityGroups"],"Resource":["*"],"Effect":"Allow"}]}",
        "role": "\${aws_iam_role.Function_IamRole_678BE84C.name}",
      },
    },
    "aws_iam_role_policy_attachment": {
      "Function_IamRolePolicyAttachment_CACE1358": {
        "policy_arn": "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
        "role": "\${aws_iam_role.Function_IamRole_678BE84C.name}",
      },
    },
    "aws_internet_gateway": {
      "InternetGateway": {
        "tags": {
          "Name": "Default-c82bf964-internet-gateway",
        },
        "vpc_id": "\${aws_vpc.VPC.id}",
      },
    },
    "aws_lambda_function": {
      "Function": {
        "architectures": [
          "arm64",
        ],
        "environment": {
          "variables": {
            "NODE_OPTIONS": "--enable-source-maps",
            "WING_FUNCTION_NAME": "Function-c852aba6",
          },
        },
        "function_name": "Function-c852aba6",
        "handler": "index.handler",
        "memory_size": 1024,
        "publish": true,
        "role": "\${aws_iam_role.Function_IamRole_678BE84C.arn}",
        "runtime": "nodejs20.x",
        "s3_bucket": "\${aws_s3_bucket.Code.bucket}",
        "s3_key": "\${aws_s3_object.Function_S3Object_C62A0C2D.key}",
        "timeout": 60,
        "vpc_config": {
          "security_group_ids": [
            "\${aws_security_group.Function_FunctionSecurityGroup_2DC31536.id}",
          ],
          "subnet_ids": [
            "\${aws_subnet.PrivateSubnet.id}",
            "\${aws_subnet.PrivateSubnet2.id}",
          ],
        },
      },
    },
    "aws_nat_gateway": {
      "NATGateway": {
        "allocation_id": "\${aws_eip.EIP.id}",
        "subnet_id": "\${aws_subnet.PublicSubnet.id}",
        "tags": {
          "Name": "Default-c82bf964-nat-gateway",
        },
      },
    },
    "aws_route_table": {
      "PrivateRouteTable": {
        "route": [
          {
            "carrier_gateway_id": null,
            "cidr_block": "0.0.0.0/0",
            "core_network_arn": null,
            "destination_prefix_list_id": null,
            "egress_only_gateway_id": null,
            "gateway_id": null,
            "ipv6_cidr_block": null,
            "local_gateway_id": null,
            "nat_gateway_id": "\${aws_nat_gateway.NATGateway.id}",
            "network_interface_id": null,
            "transit_gateway_id": null,
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": null,
          },
        ],
        "tags": {
          "Name": "Default-c82bf964-private-route-table-1",
        },
        "vpc_id": "\${aws_vpc.VPC.id}",
      },
      "PrivateRouteTable2": {
        "route": [
          {
            "carrier_gateway_id": null,
            "cidr_block": "0.0.0.0/0",
            "core_network_arn": null,
            "destination_prefix_list_id": null,
            "egress_only_gateway_id": null,
            "gateway_id": null,
            "ipv6_cidr_block": null,
            "local_gateway_id": null,
            "nat_gateway_id": "\${aws_nat_gateway.NATGateway.id}",
            "network_interface_id": null,
            "transit_gateway_id": null,
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": null,
          },
        ],
        "tags": {
          "Name": "Default-c82bf964-private-route-table-2",
        },
        "vpc_id": "\${aws_vpc.VPC.id}",
      },
      "PublicRouteTable": {
        "route": [
          {
            "carrier_gateway_id": null,
            "cidr_block": "0.0.0.0/0",
            "core_network_arn": null,
            "destination_prefix_list_id": null,
            "egress_only_gateway_id": null,
            "gateway_id": "\${aws_internet_gateway.InternetGateway.id}",
            "ipv6_cidr_block": null,
            "local_gateway_id": null,
            "nat_gateway_id": null,
            "network_interface_id": null,
            "transit_gateway_id": null,
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": null,
          },
        ],
        "tags": {
          "Name": "Default-c82bf964-public-route-table-1",
        },
        "vpc_id": "\${aws_vpc.VPC.id}",
      },
    },
    "aws_route_table_association": {
      "PrivateRouteTableAssociation": {
        "route_table_id": "\${aws_route_table.PrivateRouteTable.id}",
        "subnet_id": "\${aws_subnet.PrivateSubnet.id}",
      },
      "PrivateRouteTableAssociation2": {
        "route_table_id": "\${aws_route_table.PrivateRouteTable2.id}",
        "subnet_id": "\${aws_subnet.PrivateSubnet2.id}",
      },
      "PublicRouteTableAssociation": {
        "route_table_id": "\${aws_route_table.PublicRouteTable.id}",
        "subnet_id": "\${aws_subnet.PublicSubnet.id}",
      },
    },
    "aws_s3_bucket": {
      "Code": {
        "bucket_prefix": "code-c84a50b1-",
      },
    },
    "aws_s3_object": {
      "Function_S3Object_C62A0C2D": {
        "bucket": "\${aws_s3_bucket.Code.bucket}",
        "key": "<key>",
        "source": "<source>",
      },
    },
    "aws_security_group": {
      "Function_FunctionSecurityGroup_2DC31536": {
        "egress": [
          {
            "cidr_blocks": [
              "0.0.0.0/0",
            ],
            "description": null,
            "from_port": 0,
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_groups": null,
            "self": null,
            "to_port": 0,
          },
        ],
        "vpc_id": "\${aws_vpc.VPC.id}",
      },
    },
    "aws_subnet": {
      "PrivateSubnet": {
        "availability_zone": "\${data.aws_region.Region.name}a",
        "cidr_block": "10.0.4.0/22",
        "tags": {
          "Name": "Default-c82bf964-private-subnet-1",
        },
        "vpc_id": "\${aws_vpc.VPC.id}",
      },
      "PrivateSubnet2": {
        "availability_zone": "\${data.aws_region.Region.name}b",
        "cidr_block": "10.0.8.0/22",
        "tags": {
          "Name": "Default-c82bf964-private-subnet-2",
        },
        "vpc_id": "\${aws_vpc.VPC.id}",
      },
      "PublicSubnet": {
        "availability_zone": "\${data.aws_region.Region.name}a",
        "cidr_block": "10.0.0.0/24",
        "tags": {
          "Name": "Default-c82bf964-public-subnet-1",
        },
        "vpc_id": "\${aws_vpc.VPC.id}",
      },
    },
    "aws_vpc": {
      "VPC": {
        "cidr_block": "10.0.0.0/16",
        "enable_dns_hostnames": true,
        "enable_dns_support": true,
        "tags": {
          "Name": "Default-c82bf964-vpc",
        },
      },
    },
  },
}
`;

exports[`replace invalid character from function name 1`] = `
{
  "resource": {
    "aws_cloudwatch_log_group": {
      "TheMightyFunction_CloudwatchLogGroup_E141F677": {
        "name": "/aws/lambda/The-Mighty-Function-c86ccf73",
        "retention_in_days": 30,
      },
    },
    "aws_iam_role": {
      "TheMightyFunction_IamRole_5421E649": {
        "assume_role_policy": "{"Version":"2012-10-17","Statement":[{"Action":"sts:AssumeRole","Principal":{"Service":"lambda.amazonaws.com"},"Effect":"Allow"}]}",
      },
    },
    "aws_iam_role_policy": {
      "TheMightyFunction_IamRolePolicy_B7246118": {
        "policy": "{"Version":"2012-10-17","Statement":[{"Effect":"Allow","Action":"none:null","Resource":"*"}]}",
        "role": "\${aws_iam_role.TheMightyFunction_IamRole_5421E649.name}",
      },
    },
    "aws_iam_role_policy_attachment": {
      "TheMightyFunction_IamRolePolicyAttachment_FD664B8E": {
        "policy_arn": "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
        "role": "\${aws_iam_role.TheMightyFunction_IamRole_5421E649.name}",
      },
    },
    "aws_lambda_function": {
      "TheMightyFunction": {
        "architectures": [
          "arm64",
        ],
        "environment": {
          "variables": {
            "NODE_OPTIONS": "--enable-source-maps",
            "WING_FUNCTION_NAME": "The-Mighty-Function-c86ccf73",
          },
        },
        "function_name": "The-Mighty-Function-c86ccf73",
        "handler": "index.handler",
        "memory_size": 1024,
        "publish": true,
        "role": "\${aws_iam_role.TheMightyFunction_IamRole_5421E649.arn}",
        "runtime": "nodejs20.x",
        "s3_bucket": "\${aws_s3_bucket.Code.bucket}",
        "s3_key": "\${aws_s3_object.TheMightyFunction_S3Object_51333814.key}",
        "timeout": 60,
        "vpc_config": {
          "security_group_ids": [],
          "subnet_ids": [],
        },
      },
    },
    "aws_s3_bucket": {
      "Code": {
        "bucket_prefix": "code-c84a50b1-",
      },
    },
    "aws_s3_object": {
      "TheMightyFunction_S3Object_51333814": {
        "bucket": "\${aws_s3_bucket.Code.bucket}",
        "key": "<key>",
        "source": "<source>",
      },
    },
  },
}
`;

exports[`replace invalid character from function name 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "Code": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformResource",
                  "version": "0.20.3",
                },
                "display": {},
                "id": "Code",
                "path": "root/Default/Code",
              },
              "The%Mighty$Function": {
                "children": {
                  "Asset": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformAsset",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "Asset",
                    "path": "root/Default/The%Mighty$Function/Asset",
                  },
                  "CloudwatchLogGroup": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "CloudwatchLogGroup",
                    "path": "root/Default/The%Mighty$Function/CloudwatchLogGroup",
                  },
                  "Default": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "Default",
                    "path": "root/Default/The%Mighty$Function/Default",
                  },
                  "IamRole": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "IamRole",
                    "path": "root/Default/The%Mighty$Function/IamRole",
                  },
                  "IamRolePolicy": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "IamRolePolicy",
                    "path": "root/Default/The%Mighty$Function/IamRolePolicy",
                  },
                  "IamRolePolicyAttachment": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "IamRolePolicyAttachment",
                    "path": "root/Default/The%Mighty$Function/IamRolePolicyAttachment",
                  },
                  "S3Object": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "display": {},
                    "id": "S3Object",
                    "path": "root/Default/The%Mighty$Function/S3Object",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.3.0",
                },
                "display": {
                  "description": "A cloud function (FaaS)",
                  "title": "Function",
                },
                "id": "The%Mighty$Function",
                "path": "root/Default/The%Mighty$Function",
              },
              "aws": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.20.3",
                },
                "display": {},
                "id": "aws",
                "path": "root/Default/aws",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.3.0",
            },
            "display": {},
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.20.3",
            },
            "display": {},
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.20.3",
        },
        "display": {},
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.20.3",
    },
    "display": {},
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;
